--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,92 +7,6 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <TextView
-        android:id="@+id/appStatusLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/app_status_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mockLocationPermission" />
-
-    <TextView
-        android:id="@+id/appStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/unknown_string_value"
-        app:layout_constraintBaseline_toBaselineOf="@+id/appStatusLabel"
-        app:layout_constraintStart_toEndOf="@+id/appStatusLabel" />
-
-    <TextView
-        android:id="@+id/connectionStatusLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/connection_status_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appStatusLabel" />
-
-    <TextView
-        android:id="@+id/connectionStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/unknown_string_value"
-        app:layout_constraintBaseline_toBaselineOf="@+id/connectionStatusLabel"
-        app:layout_constraintStart_toEndOf="@+id/connectionStatusLabel" />
-
-    <TextView
-        android:id="@+id/pauseEntryLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/pause_entry_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connectionStatusLabel" />
-
-    <EditText
-        android:id="@+id/pauseValue"
-        android:layout_width="@dimen/input_width"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBaseline_toBaselineOf="@+id/pauseEntryLabel"
-        app:layout_constraintStart_toEndOf="@+id/pauseEntryLabel" />
-
-    <TextView
-        android:id="@+id/sendIntervalLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/send_entry_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pauseEntryLabel" />
-
-    <EditText
-        android:id="@+id/sendIntervalValue"
-        android:layout_width="@dimen/input_width"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBaseline_toBaselineOf="@+id/sendIntervalLabel"
-        app:layout_constraintStart_toEndOf="@+id/sendIntervalLabel" />
-
     <Button
         android:id="@+id/startOnceButton"
         android:layout_width="@dimen/button_width"
@@ -101,11 +15,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/one_run_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendIntervalValue" />
+        app:layout_constraintTop_toBottomOf="@+id/enableMockLocation" />
 
     <Button
         android:id="@+id/startContinuousButton"
